<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>image_pipeline_examples</name>
  <version>0.3.0</version>
  <description>
    Provides Node wrappers to group together and demonstrate various 
    combinations of hardware accelerated perception pipelines 
    using the image_pipeline package.
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>
  <buildtool_depend>ament_cuda</buildtool_depend>

  <depend>image_proc</depend>
  <depend>isaac_ros_image_proc</depend>
  <depend>rclcpp</depend>
  <!-- <depend>acceleration_firmware_kv260</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
