<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>image_proc_adaptive</name>
  <version>0.3.0</version>
  <description>
    An example that makes use of the image_pipeline meta-package to demonstrate
    how to make a ROS 2 image_proc adaptive Component that can run either
    in CPU or in the FPGA.
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>

  <!-- <depend>tracetools</depend>
  <depend>tracetools_acceleration</depend> -->
  <depend>adaptive_component</depend>
  <depend>rclcpp</depend>
  <depend>acceleration_firmware_kv260</depend>
  <depend>image_proc</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
