<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>offloaded_doublevadd_publisher</name>
  <version>0.3.1</version>
  <description>A trivial double vector-add ROS 2 publisher that adds two
    inputs to a vector in a loop and attempts to publish them on the go 
    at 10 Hz. Vector add operations are offloaded into to the FPGA.

    This example builds on top of "doublevadd_publisher" which is only able to
    publish at 2 Hz on the quad-core Cortex-A53 Application Processing 
    Units (APUs) of the Zynq Ultrascale+ (ZU+) SoC.

    The offloading operation into the FPGA (or to the Programmable Logic (PL))
    uses code "as is" and doesn't exploit any parallelism nor optimizes the 
    computation flows. Correspondingly, the publisher does not improve its 
    performance when compared to its CPU baseline. In fact the performance 
    degrades and its publishing rate lowers from from 2 Hz, up to 1.5 Hz.

    See "accelerated_doublevadd_publisher" for a version that optimizes 
    the computation flow. See "faster_doublevadd_publisher" for another
    version that besides the computation flow, also exploits parallelism    
    to meet the targeted rate (10 Hz).
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vitis_common</build_depend>
  <!-- <build_depend>acceleration_firmware_kv260</build_depend> -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>acceleration_firmware_kv260</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
